api/cart/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: cart
  namespace: api
spec:
  host: cart.api.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: v1
