api/cart/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cart
  namespace: api
spec:
  hosts:
    - "api.sogeor.com"
  gateways:
    - "istio-system/master"
  http:
    - match:
        - uri:
            prefix: /v1/cart
          port: 9090
      route:
        - destination:
            port:
              number: 9090
            host: cart.api.svc.cluster.local
            subset: v1
    - match:
        - uri:
            prefix: /v1/cart
      route:
        - destination:
            port:
              number: 8080
            host: cart.api.svc.cluster.local
            subset: v1
  exportTo:
    - "istio-system"
